<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:scrollbars="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <ScrollView
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/sand_prompt"
    />
    <Spinner 
        android:id="@+id/sandcol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/water_prompt"
    />
    <Spinner 
        android:id="@+id/watercol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/wall_prompt"
    />
    <Spinner 
        android:id="@+id/wallcol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/plant_prompt"
    />
    <Spinner 
        android:id="@+id/plantcol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/fire_prompt"
    />
    <Spinner 
        android:id="@+id/firecol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/ice_prompt"
    />
    <Spinner 
        android:id="@+id/icecol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/oil_prompt"
    />
    <Spinner 
        android:id="@+id/oilcol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/magma_prompt"
    />
    <Spinner 
        android:id="@+id/magmacol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/stone_prompt"
    />
    <Spinner 
        android:id="@+id/stonecol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/C4_prompt"
    />
    <Spinner 
        android:id="@+id/C4col"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/C4plus_prompt"
    />
    <Spinner 
        android:id="@+id/C4pluscol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/Fuse_prompt"
    />
    <Spinner 
        android:id="@+id/fusecol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/DestructableWall_prompt"
    />
    <Spinner 
        android:id="@+id/destructablewallcol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/Acid_prompt"
    />
    <Spinner 
        android:id="@+id/acidcol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/Steam_prompt"
    />
    <Spinner 
        android:id="@+id/steamcol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/Salt_prompt"
    />
    <Spinner 
        android:id="@+id/saltcol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/SaltWater_prompt"
    />
    <Spinner 
        android:id="@+id/saltwatercol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/Glass_prompt"
    />
    <Spinner 
        android:id="@+id/glasscol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/Mud_prompt"
    />
    <Spinner 
        android:id="@+id/mudcol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/CustomEle_prompt"
    />
    <Spinner 
        android:id="@+id/customelecol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/reaction_prompt"
    />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/explonesstext"
    />
    <SeekBar
			android:id="@+id/explo_slider"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:padding="5px" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/redtext"
    />		
    <SeekBar
			android:id="@+id/red_1_slider"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:padding="5px" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/greentext"
    />		
	<SeekBar
			android:id="@+id/green_1_slider"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:padding="5px" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/bluetext"
    />		
	<SeekBar
			android:id="@+id/blue_1_slider"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:padding="5px" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/densitytext" 
    />		
	<SeekBar
			android:id="@+id/density_slider"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:padding="5px" />		
	
			
    </LinearLayout>
    </ScrollView>
</LinearLayout>